# agent-kit

./: .gitignore  CLAUDE.md  README.md  agent-kit-docs.html  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md
src/agent_kit/: __init__.py  agent.py  config.py  errors.py  events.py  invocation.py  middleware.py  model_adapter.py  nested.py  state.py
src/agent_kit/graph/: __init__.py  base.py  nodes.py  react.py
src/agent_kit/llm/: __init__.py  conduit_adapter.py  langchain_adapter.py  types.py
src/agent_kit/tools/: __init__.py  base.py  decorator.py  executor.py  model_binding.py  registry.py  schema.py
src/agent_kit/utils/: async_utils.py  state_utils.py
tests/: fakes.py  test_agent_invocation.py  test_agent_rebuild.py  test_conduit_model_adapter.py  test_executor_parallel.py  test_executor_sequential.py  test_graph_react.py  test_middleware.py  test_model_binding.py  test_nested_agents.py  test_react_validation_repair.py  test_state.py  test_stream_events.py  test_tool_decorator.py  test_tools_base.py  test_validation_error_details.py
tests/integration/: conftest.py  test_conduit_integration.py
